--- a/main-pages.css
+++ b/main-pages.css
@@ -5,9 +5,16 @@
 #main-body-div {
     background-color: slateblue;
     display: grid;
-    grid-template-columns: 2fr 1fr;
+    grid-template-columns: .5fr 2fr 1fr;
     gap: 20px;
     margin-top: 20px;
+}
+#axis-div {
+    background-color: hotpink;
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    margin-left: 20px;
 }
 #svg-div {
     background-color: lightblue;
