add color for labrador retriever

--- a/css/main-pages.css
+++ b/css/main-pages.css
@@ -28,7 +28,7 @@
     padding-top: 30px;
 }
 #description-div {
-    background-color: lightblue;
+    background-color: lightgoldenrodyellow;
     padding-left: 10px;
     padding-right: 10px;
 }
